Fix overlapping bubbles in contact-me section

--- a/styles/contact-me-page.styles.css
+++ b/styles/contact-me-page.styles.css
@@ -230,7 +230,7 @@ input, textarea{
     }
 }
 
-/*Center recaptcha popup on mobile*/
+/*Center recaptcha popup*/
 .g-recaptcha-bubble-arrow
 {
     display: none;
@@ -279,21 +279,21 @@ input, textarea{
     display: inherit;
 }
 
-/*Desktop small blolbs*/
-.contact-page-middle-blob{
-    position:absolute;
-    right: 7%;
-    bottom: 2.5%;
-    width: 4em;
-    height: 4em;
-}
-
+/*Desktop little blolbs*/
 .contact-page-little-blob{
     position:absolute;
-    right: 12.5%;
-    bottom: 7%;
-    width: 6em;
-    height: 6em;
+    right: 5%;
+    bottom: 1.5%;
+    width: 3em;
+    height: 3em;
+}
+
+.contact-page-middle-blob{
+    position:absolute;
+    right: 11%;
+    bottom: 4%;
+    width: 5em;
+    height: 5em;
 }
 
 .contact-page-middle-blob path,
@@ -353,13 +353,17 @@ input, textarea{
         --contact-me-form-input-height: 2.75rem;
         --contact-me-form-textarea-height: 8rem;
     }
-    .contact-page-middle-blob{
+    .contact-page-little-blob{
         right: 12.5%;
         bottom: 4.5%;
+        width: 4.5rem;
+        height: 4.5rem;
     }
     
-    .contact-page-little-blob{
+    .contact-page-middle-blob{
         right: 19.5%;
         bottom: 10%;
+        width: 7.5rem;
+        height: 7.5rem;
     }
 }
